--- a/index.html
+++ b/index.html
@@ -67,14 +67,16 @@
                     <li>
                       <a href="#">Home</a>
                     </li>
-                    <li>
-                      <a href="#">About</a>
-                    </li>
+
                     <li>
                       <a href="#service-area">Services</a>
                     </li>
+
                     <li>
                       <a href="#portfolio-area">Portfolio</a>
+                    </li>
+                    <li>
+                      <a href="#reviews-area">Reviews</a>
                     </li>
 
                     <li><a href="#">Contact</a></li>
@@ -672,6 +674,148 @@
         </div>
       </section>
     </main>
+
+    <!---------------------------- testimonial-area-start ---------------------------->
+    <section id="reviews-area" class="pt-65">
+      <div class="tp-testimonial-area pb-130 p-relative">
+        <div class="bs-testi-shape-1 d-none d-lg-block">
+          <img src="assets/img/testimonial/testimonial-shape-5.3.png" alt="" />
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-12">
+              <div
+                class="tp-testi-wrapper d-flex pb-50 justify-content-between align-items-end"
+              >
+                <div class="tp-testimonial-title-box">
+                  <h5 class="tp-subtitle">Reviews</h5>
+                  <h2 class="tp-title-sm">Check what customer say</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tp-testimonial-slider-section-four">
+            <div class="swiper-container testi-slider-active-five">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="tp-testimonial-item-four">
+                    <div
+                      class="tp-testimonial-item-four__meta d-flex justify-content-between align-items-center mb-60"
+                    >
+                      <div class="tp-testimonial-item-four__rating">
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                      </div>
+                    </div>
+                    <div class="tp-testi-paragraph pb-40">
+                      <p>
+                        Wow. What a great experience with this copywriter.
+                        Muhammad Noman is a very talented copywriter. yesterday
+                        I got his first Email that was amazing... experience
+                        with him
+                      </p>
+                    </div>
+                    <div
+                      class="tp-testimonial-item-four__client d-flex align-items-center"
+                    >
+                      <div class="mr-20">
+                        <img
+                          src="assets/img/testimonial/testi-4.2.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="tp-testimonial-item-four__position">
+                        <h4 class="m-0">Leslie Alexander</h4>
+                        <!-- <span>P. Desiger of (Amazon)</span> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="tp-testimonial-item-four">
+                    <div
+                      class="tp-testimonial-item-four__meta d-flex justify-content-between align-items-center mb-60"
+                    >
+                      <div class="tp-testimonial-item-four__rating">
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                      </div>
+                    </div>
+                    <div class="tp-testi-paragraph pb-40">
+                      <p>
+                        Excellent UI/Ux Design. She literally transformed my App
+                        into a wonderful piece of art. She's got awesome Ui
+                        design skills. - Hardworking Dedicated Great
+                        Communication Skills
+                      </p>
+                    </div>
+                    <div
+                      class="tp-testimonial-item-four__client d-flex align-items-center"
+                    >
+                      <div class="mr-20">
+                        <img
+                          src="assets/img/testimonial/testi-4.5.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="tp-testimonial-item-four__position">
+                        <h4 class="m-0">Guy Hawkins</h4>
+                        <!-- <span>Ux Designer of (Godaddy)</span> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="tp-testimonial-item-four">
+                    <div
+                      class="tp-testimonial-item-four__meta d-flex justify-content-between align-items-center mb-60"
+                    >
+                      <div class="tp-testimonial-item-four__rating">
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                        <span><i class="fas fa-star"></i></span>
+                      </div>
+                    </div>
+                    <div class="tp-testi-paragraph pb-40">
+                      <p>
+                        Absolutely amazing. we can't believe how incredible this
+                        turned out. Yetta Thomas is a true professional. he is
+                        such a honest, decent and reliable. and he have greate
+                        experience.
+                      </p>
+                    </div>
+                    <div
+                      class="tp-testimonial-item-four__client d-flex align-items-center"
+                    >
+                      <div class="mr-20">
+                        <img
+                          src="assets/img/testimonial/testi-4.1.png"
+                          alt=""
+                        />
+                      </div>
+                      <div class="tp-testimonial-item-four__position">
+                        <h4 class="m-0">Kristin Watson</h4>
+                        <!-- <span>CEO of (Zlitemes)</span> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-------------------------------------- testimonial-area-end ---------------------------------------------->
     <!-- footer-area-start -->
 
     <footer>
