pre bridal pricing updated

--- a/index.html
+++ b/index.html
@@ -366,12 +366,125 @@
                         data-bs-parent="#accordionExample"
                       >
                         <div class="accordion-body">
-                          A dedicated product design team can help you achieve
-                          your business goals. Whether you need to craft an idea
-                          for a completely new product or elevate the quality of
-                          an existing solution, we’ll help you to create a
-                          product that is laser targeted to your users’ needs
-                          and delivers business results.
+                          <!--price-area-start -->
+                          <div class="cp-price-area">
+                            <div class="container">
+                              <div class="row tp-gx-15">
+                                <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+                                  <div class="cpprice text-center mb-20">
+                                    <div class="cpprice__title">
+                                      <h3 class="cp-price-title">
+                                        Makeup By <br />
+                                        <strong> Shivangi Wason </strong>
+                                      </h3>
+                                    </div>
+                                    <div
+                                      style="border: 1px solid black"
+                                      class="pt-2 pb-2"
+                                    >
+                                      <div class="cpprice__meta">
+                                        <h4 style="color: black">HD Bridal</h4>
+                                      </div>
+                                      <div class="cpprice__meta">
+                                        <h4
+                                          style="
+                                            color: black;
+                                            font-weight: bold;
+                                          "
+                                        >
+                                          ₹22,000
+                                        </h4>
+                                      </div>
+                                    </div>
+                                    <div
+                                      style="
+                                        border: 1px solid black;
+                                        margin-top: 20px;
+                                      "
+                                    >
+                                      <div class="cpprice__meta">
+                                        <h4 style="color: black">AB Bridal</h4>
+                                      </div>
+                                      <div class="cpprice__meta">
+                                        <h4
+                                          style="
+                                            color: black;
+                                            font-weight: bold;
+                                          "
+                                        >
+                                          ₹25,000
+                                        </h4>
+                                      </div>
+                                    </div>
+
+                                    <div class="cpprice__button">
+                                      <button class="tp-btn-yellow">
+                                        <a href="#">Get Service Today</a>
+                                        <i class="fal fa-long-arrow-right"></i>
+                                      </button>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+                                  <div class="cpprice text-center mb-20">
+                                    <div class="cpprice__title">
+                                      <h3 class="cp-price-title">
+                                        Makeup By <br />
+                                        <strong> Senior Artists </strong>
+                                      </h3>
+                                    </div>
+                                    <div
+                                      style="border: 1px solid black"
+                                      class="pt-2 pb-2"
+                                    >
+                                      <div class="cpprice__meta">
+                                        <h4 style="color: black">HD Bridal</h4>
+                                      </div>
+                                      <div class="cpprice__meta">
+                                        <h4
+                                          style="
+                                            color: black;
+                                            font-weight: bold;
+                                          "
+                                        >
+                                          ₹13,000
+                                        </h4>
+                                      </div>
+                                    </div>
+                                    <div
+                                      style="
+                                        border: 1px solid black;
+                                        margin-top: 20px;
+                                      "
+                                    >
+                                      <div class="cpprice__meta">
+                                        <h4 style="color: black">AB Bridal</h4>
+                                      </div>
+                                      <div class="cpprice__meta">
+                                        <h4
+                                          style="
+                                            color: black;
+                                            font-weight: bold;
+                                          "
+                                        >
+                                          ₹15,000
+                                        </h4>
+                                      </div>
+                                    </div>
+
+                                    <div class="cpprice__button">
+                                      <button class="tp-btn-yellow">
+                                        <a href="#">Get Service Today</a>
+                                        <i class="fal fa-long-arrow-right"></i>
+                                      </button>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <!-- price-area-end -->
                         </div>
                       </div>
                     </div>
