--- a/price.html
+++ b/price.html
@@ -293,7 +293,7 @@
         <div class="container">
           <div class="row tp-gx-15">
             <div class="col-xl-4 col-lg-6 col-md-6 col-12">
-              <div class="cpprice text-center mb-20">
+              <div class="cpprice mb-20">
                 <div class="cpprice__title">
                   <h3 class="cp-price-title">Professional</h3>
                 </div>
