--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                       <a href="#portfolio-area">Portfolio</a>
                     </li>
                     <li>
-                      <a class="gradient-text" href="#">Academy</a>
+                      <a class="gradient-text" href="academy.html">Academy</a>
                     </li>
 
                     <li>
@@ -259,7 +259,7 @@
 
         <!-- tp-hero-area-end -->
       </section>
-      <!---------------------------------service-area-start ------------------------->
+      <!---------------------------------service-area-1-start ------------------------->
       <section id="service-area">
         <div class="tp-team-area pt-125 pb-100">
           <div class="container">
@@ -442,8 +442,269 @@
         </div>
       </section>
 
-      <!---------------------------------service-area-end ------------------------->
+      <!---------------------------------service-area-1-end ------------------------->
 
+      <!-- project-area start-->
+      <div
+        class="tp-project-area tp-project-bs-space pt-130 pb-130 fix p-relative"
+      >
+        <div class="container">
+          <div class="row mb-4">
+            <div class="row justify-content-center">
+              <div class="col-xl-10">
+                <div class="tp-project-section-box text-center pb-4">
+                  <img
+                    src="assets/img/new/logo.png"
+                    style="width: 150px; height: 150px"
+                    alt=""
+                  />
+                  <h2 class="tp-title-sm pt-4">
+                    Our
+                    <span class="tp-section-highlight">
+                      Services
+                      <svg
+                        width="141"
+                        height="11"
+                        viewBox="0 0 141 11"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path d="M0 0L141 11H0V0Z" fill="#FFDC60" />
+                      </svg>
+                    </span>
+                  </h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="tp-project-slider-section">
+              <div class="swiper-container project-slider-active">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="tpproject">
+                      <div class="tpproject__thumb">
+                        <div class="fix radius-20">
+                          <img
+                            class="w-100"
+                            src="assets/img/new/services/pre-bridal.jpg"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                      <div class="tpproject__content pt-4">
+                        <h3 class="tp-pj-title">
+                          <a href="#service-details" style="font-weight: bold"
+                            >Pre-Bridal
+                            <svg
+                              width="18"
+                              height="33"
+                              viewBox="0 0 18 33"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <line
+                                x1="0.707107"
+                                y1="1.18181"
+                                x2="16.7071"
+                                y2="17.1818"
+                                stroke="black"
+                                stroke-width="2"
+                              />
+                              <line
+                                x1="1.07121"
+                                y1="31.4041"
+                                x2="15.2934"
+                                y2="17.1819"
+                                stroke="black"
+                                stroke-width="2"
+                              />
+                            </svg>
+                          </a>
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="tpproject">
+                      <div class="tpproject__thumb">
+                        <div class="fix radius-20">
+                          <img
+                            class="w-100"
+                            src="assets/img/new/services/bridal.jpg"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                      <div class="tpproject__content pt-4">
+                        <h3 class="tp-pj-title">
+                          <a href="#service-details" style="font-weight: bold"
+                            >Bridal
+                            <svg
+                              width="18"
+                              height="33"
+                              viewBox="0 0 18 33"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <line
+                                x1="0.707107"
+                                y1="1.18181"
+                                x2="16.7071"
+                                y2="17.1818"
+                                stroke="black"
+                                stroke-width="2"
+                              />
+                              <line
+                                x1="1.07121"
+                                y1="31.4041"
+                                x2="15.2934"
+                                y2="17.1819"
+                                stroke="black"
+                                stroke-width="2"
+                              /></svg
+                          ></a>
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="tpproject">
+                      <div class="tpproject__thumb">
+                        <div class="fix radius-20">
+                          <img
+                            class="w-100"
+                            src="assets/img/new/services/hair.jpg"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                      <div class="tpproject__content pt-4">
+                        <h3 class="tp-pj-title">
+                          <a href="#service-details" style="font-weight: bold"
+                            >Hair
+                            <svg
+                              width="18"
+                              height="33"
+                              viewBox="0 0 18 33"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <line
+                                x1="0.707107"
+                                y1="1.18181"
+                                x2="16.7071"
+                                y2="17.1818"
+                                stroke="black"
+                                stroke-width="2"
+                              />
+                              <line
+                                x1="1.07121"
+                                y1="31.4041"
+                                x2="15.2934"
+                                y2="17.1819"
+                                stroke="black"
+                                stroke-width="2"
+                              /></svg
+                          ></a>
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="tpproject">
+                      <div class="tpproject__thumb">
+                        <div class="fix radius-20">
+                          <img
+                            class="w-100"
+                            src="assets/img/new/services/skin.jpg"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                      <div class="tpproject__content pt-4">
+                        <h3 class="tp-pj-title">
+                          <a href="#service-details" style="font-weight: bold"
+                            >Skin Care
+                            <svg
+                              width="18"
+                              height="33"
+                              viewBox="0 0 18 33"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <line
+                                x1="0.707107"
+                                y1="1.18181"
+                                x2="16.7071"
+                                y2="17.1818"
+                                stroke="black"
+                                stroke-width="2"
+                              />
+                              <line
+                                x1="1.07121"
+                                y1="31.4041"
+                                x2="15.2934"
+                                y2="17.1819"
+                                stroke="black"
+                                stroke-width="2"
+                              /></svg
+                          ></a>
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="tpproject">
+                      <div class="tpproject__thumb">
+                        <div class="fix radius-20">
+                          <img
+                            class="w-100"
+                            src="assets/img/new/services/nails.jpg"
+                            alt=""
+                          />
+                        </div>
+                      </div>
+                      <div class="tpproject__content pt-4">
+                        <h3 class="tp-pj-title">
+                          <a href="#service-details" style="font-weight: bold"
+                            >Nails
+                            <svg
+                              width="18"
+                              height="33"
+                              viewBox="0 0 18 33"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <line
+                                x1="0.707107"
+                                y1="1.18181"
+                                x2="16.7071"
+                                y2="17.1818"
+                                stroke="black"
+                                stroke-width="2"
+                              />
+                              <line
+                                x1="1.07121"
+                                y1="31.4041"
+                                x2="15.2934"
+                                y2="17.1819"
+                                stroke="black"
+                                stroke-width="2"
+                              /></svg
+                          ></a>
+                        </h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="my-dots text-center"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- project-area-end -->
       <!---------------------------------portfolio start ------------------------->
       <section
         id="portfolio-area"
@@ -458,7 +719,7 @@
           </div>
         </div>
         <div class="tp-portfolio-area pb-100 p-relative">
-          <div class="container">
+          <div class="container-fluid">
             <div class="row justify-content-center mb-80">
               <div class="col-10 p-0 text-center">
                 <div class="tp-project-tab-button masonary-menu">
@@ -466,11 +727,16 @@
                     <span>All</span>
                   </button>
                   <button data-filter=".cat2">
+                    <span>Pre-Bridal Makeup</span>
+                  </button>
+                  <button data-filter=".cat3">
                     <span>Bridal Makeup</span>
                   </button>
-                  <button data-filter=".cat3"><span>Salon </span></button>
                   <button data-filter=".cat4"><span>Hair</span></button>
                   <button data-filter=".cat5">
+                    <span>Skin Care</span>
+                  </button>
+                  <button data-filter=".cat6">
                     <span>Nails</span>
                   </button>
                 </div>
@@ -491,7 +757,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-4 grid-item cat2 cat3 mb-20">
+              <div
+                class="col-xl-4 col-lg-4 col-md-4 grid-item cat2 cat3 cat6 mb-20"
+              >
                 <div class="tp-project-item-two portfolio-four p-relative">
                   <div class="fix radius-20">
                     <img class="w-100" src="assets/img/new/2.jpg" alt="" />
@@ -503,7 +771,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-4 col-lg-4 col-md-4 grid-item cat4 cat3 mb-20">
+              <div
+                class="col-xl-4 col-lg-4 col-md-4 grid-item cat4 cat6 cat3 mb-20"
+              >
                 <div class="tp-project-item-two portfolio-four p-relative">
                   <div class="fix radius-20">
                     <img class="w-100" src="assets/img/new/3.jpeg" alt="" />
@@ -649,7 +919,7 @@
                     aria-controls="nav-Skin-tab"
                     aria-selected="true"
                   >
-                    <span>Skin Cae</span>
+                    <span>Skin Care</span>
                   </button>
                   <button
                     class="nav-links"
@@ -1773,7 +2043,7 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="col-xl-3 col-lg-3 col-md-6">
               <div class="tp-footer-widget">
                 <div class="tp-footer-widget__logo mb-30">
                   <a href="index.html"
@@ -1792,7 +2062,7 @@
               </div>
             </div>
             <div
-              class="col-xl-3 col-lg-2 col-md-6 d-flex justify-content-lg-center"
+              class="col-xl-3 col-lg-3 col-md-6 d-flex justify-content-lg-center"
             >
               <div class="tp-footer-widget">
                 <div class="tp-footer-widget__title pb-15">
@@ -1800,32 +2070,17 @@
                 </div>
                 <div class="tp-footer-widget__list">
                   <ul>
+                    <li><a href="#">Our Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Academy</a></li>
+                    <li><a href="#">Reviews</a></li>
                     <li><a href="#">Contact us</a></li>
-                    <li><a href="#">How it Works</a></li>
-                    <li><a href="#">Create</a></li>
-                    <li><a href="#">Explore</a></li>
-                    <li><a href="#">Terms & Services</a></li>
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-lg-2 col-md-6">
-              <div class="tp-footer-widget pl-20">
-                <div class="tp-footer-widget__title pb-15">
-                  <h3 class="footer-title text-black">Community</h3>
-                </div>
-                <div class="tp-footer-widget__list">
-                  <ul>
-                    <li><a href="#">Help Center</a></li>
-                    <li><a href="#">Partners</a></li>
-                    <li><a href="#">Suggestions</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Newsletters</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-3 col-lg-2 col-md-6">
+
+            <div class="col-xl-3 col-lg-3 col-md-6">
               <div class="tp-footer-widget pl-20">
                 <div class="tp-footer-widget__title pb-15">
                   <h3 class="footer-title text-black">Contact Us</h3>
@@ -1843,8 +2098,8 @@
                         <div>
                           <p style="font-size: 14px">
                             <strong>Address</strong> <br />
-                            WZ-49, Meenakshi Garden, Subhash Nagar, New Delhi,
-                            Delhi 110027
+                            WZ-49, Meenakshi Garden, Subhash <br />
+                            Nagar, New Delhi, Delhi 110027
                           </p>
                         </div>
                       </div>
@@ -1863,6 +2118,24 @@
                       </div>
                     </li>
                   </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-6">
+              <div class="tp-footer-widget pl-20">
+                <div class="tp-footer-widget__title pb-15">
+                  <h3 class="footer-title text-black">Find Us Here</h3>
+                </div>
+                <div class="tp-footer-widget__list" style="width: 100%">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1750.8369815304327!2d77.10430488846798!3d28.639532197964876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0310a3d28267%3A0x5924c90079117736!2sStreet%20Salon!5e0!3m2!1sen!2sin!4v1688788832387!5m2!1sen!2sin"
+                    width="300"
+                    height="200"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
                 </div>
               </div>
             </div>
