--- a/academy.html
+++ b/academy.html
@@ -670,7 +670,7 @@
       </div>
       <!-- course details-end -->
       <!--service-area-start -->
-      <div class="tp-service-area pb-90 pt-90 p-relative">
+      <!-- <div class="tp-service-area pb-90 pt-90 p-relative">
         <div class="bs-shape-1 d-none d-lg-block">
           <img src="assets/img/chose/bp-chose-6.1.png" alt="" />
         </div>
@@ -896,7 +896,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--service-area-end -->
       <!-- 
       <div class="container">
@@ -917,7 +917,7 @@
     </main>
 
     <!-- feature-area-start -->
-    <div class="tp-feature-arae pt-130 pb-100 p-relative">
+    <div class="tp-feature-arae pb-100 p-relative">
       <div class="ce-chose-shape d-none d-lg-block">
         <img src="assets/img/hero/hero-shape-4.png" alt="" />
       </div>
