--- a/academy.html
+++ b/academy.html
@@ -202,7 +202,7 @@
         </div>
       </div> -->
       <section
-        class="breadcrumb__area pt-180 pb-50 include-bg p-relative"
+        class="breadcrumb__area pb-50 include-bg p-relative banner"
         data-background="assets/img/new/academy/8.png"
       >
         <!-- <div class="ac-about-shape-img z-index-1">
@@ -295,12 +295,7 @@
               class="tp-project-section-box"
               style="border-top: 2px solid black"
             >
-              <h1
-                class="pt-10"
-                style="color: black; font-weight: bold; font-size: 80px"
-              >
-                Become a certified makeup artist
-              </h1>
+              <h1 class="pt-10 become">Become a certified makeup artist</h1>
             </div>
           </div>
         </div>
@@ -312,9 +307,9 @@
           <img src="assets/img/hero/hero-shape-4.png" alt="" />
         </div>
         <div class="container">
-          <div class="row align-items-center">
+          <div class="row align-items-center reverse-row">
             <div
-              class="col-xl-6 col-lg-6 wow tpfadeRight"
+              class="col-xl-6 col-lg-6 wow tpfadeRight column"
               data-wow-duration=".5s"
               data-wow-delay=".7s"
             >
@@ -1203,9 +1198,9 @@
         <img src="assets/img/hero/hero-shape-4.png" alt="" />
       </div>
       <div class="container">
-        <div class="row">
+        <div class="row reverse-row">
           <div
-            class="col-xl-6 col-lg-6 wow tpfadeRight"
+            class="col-xl-6 col-lg-6 wow tpfadeRight column"
             data-wow-duration=".5s"
             data-wow-delay=".7s"
           >
