update to verify

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="row align-items-center">
             <div class="col-xxl-3 col-xl-3 col-lg-3">
               <div class="tp-logo text-start">
-                <a href="#"
+                <a href="index.html"
                   ><img
                     src="assets/img/new/logo.png"
                     style="width: 80px; height: 80px"
