--- a/academy.html
+++ b/academy.html
@@ -53,7 +53,7 @@
           <div class="row align-items-center">
             <div class="col-xxl-3 col-xl-3 col-lg-3">
               <div class="tp-logo text-start">
-                <a href="#"
+                <a href="index.html"
                   ><img
                     src="assets/img/new/logo.png"
                     style="width: 80px; height: 80px"
@@ -387,7 +387,7 @@
             >
               <div class="tp-fea-img">
                 <img
-                  src="assets/img/new/academy/2.jpg"
+                  src="assets/img/new/academy/7.jpg"
                   style="border-radius: 10px"
                   alt=""
                 />
@@ -485,7 +485,7 @@
                         aria-expanded="true"
                         aria-controls="collapseOne"
                       >
-                        Week 1
+                        Day 1
                       </button>
                     </h2>
                     <div
@@ -551,7 +551,7 @@
                         aria-expanded="false"
                         aria-controls="collapseTwo"
                       >
-                        Week 2
+                        Day 2
                       </button>
                     </h2>
                     <div
@@ -580,7 +580,7 @@
                         aria-expanded="false"
                         aria-controls="collapseThree"
                       >
-                        Week 3
+                        Day 3
                       </button>
                     </h2>
                     <div
@@ -609,7 +609,7 @@
                         aria-expanded="false"
                         aria-controls="collapsefour"
                       >
-                        Week 4
+                        Day 4
                       </button>
                     </h2>
                     <div
@@ -638,7 +638,7 @@
                         aria-expanded="true"
                         aria-controls="collapsefive"
                       >
-                        Week 5
+                        Day 5
                       </button>
                     </h2>
                     <div
@@ -1207,8 +1207,10 @@
             <div class="tp-fea-right-side">
               <div class="tp-fea-section-box">
                 <h2 class="tp-title-sm pt-10 pb-40">
-                  What student say <br />
-                  about us
+                  Meet The Mentor <br />
+                  <span class="gradient-text" style="font-weight: bold"
+                    >- Shivangi Wason</span
+                  >
                 </h2>
               </div>
               <p class="">
@@ -1234,8 +1236,8 @@
           >
             <div class="tp-fea-img">
               <img
-                src="assets/img/new/academy/7.jpg"
-                style="border-radius: 10px"
+                src="assets/img/new/header-photo.png"
+                style="border-radius: 10px; width: 80%"
                 alt=""
               />
             </div>
