academy link updaetd

--- a/index.html
+++ b/index.html
@@ -2072,7 +2072,7 @@
                   <ul>
                     <li><a href="#">Our Services</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Academy</a></li>
+                    <li><a href="academy.html">Academy</a></li>
                     <li><a href="#">Reviews</a></li>
                     <li><a href="#">Contact us</a></li>
                   </ul>
