--- a/academy.html
+++ b/academy.html
@@ -561,12 +561,49 @@
                       data-bs-parent="#accordionExample"
                     >
                       <div class="accordion-body">
-                        A dedicated product design team can help you achieve
-                        your business goals. Whether you need to craft an idea
-                        for a completely new product or elevate the quality of
-                        an existing solution, we’ll help you to create a product
-                        that is laser targeted to your users’ needs and delivers
-                        business results.
+                        <h3 style="color: black; text-decoration: underline">
+                          Makeup Basics
+                        </h3>
+                        <div class="jobdetails__feature pt-3">
+                          <ul>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Detailed product knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Brush knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Vanity guidance & planning
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Face shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Colour Theory
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin analysis
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin prepping
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye liner application & types
+                            </li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -590,12 +627,49 @@
                       data-bs-parent="#accordionExample"
                     >
                       <div class="accordion-body">
-                        A dedicated product design team can help you achieve
-                        your business goals. Whether you need to craft an idea
-                        for a completely new product or elevate the quality of
-                        an existing solution, we’ll help you to create a product
-                        that is laser targeted to your users’ needs and delivers
-                        business results.
+                        <h3 style="color: black; text-decoration: underline">
+                          Makeup Basics
+                        </h3>
+                        <div class="jobdetails__feature pt-3">
+                          <ul>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Detailed product knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Brush knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Vanity guidance & planning
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Face shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Colour Theory
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin analysis
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin prepping
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye liner application & types
+                            </li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -619,12 +693,49 @@
                       data-bs-parent="#accordionExample"
                     >
                       <div class="accordion-body">
-                        A dedicated product design team can help you achieve
-                        your business goals. Whether you need to craft an idea
-                        for a completely new product or elevate the quality of
-                        an existing solution, we’ll help you to create a product
-                        that is laser targeted to your users’ needs and delivers
-                        business results.
+                        <h3 style="color: black; text-decoration: underline">
+                          Makeup Basics
+                        </h3>
+                        <div class="jobdetails__feature pt-3">
+                          <ul>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Detailed product knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Brush knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Vanity guidance & planning
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Face shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Colour Theory
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin analysis
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin prepping
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye liner application & types
+                            </li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -648,12 +759,49 @@
                       data-bs-parent="#accordionExample"
                     >
                       <div class="accordion-body">
-                        A dedicated product design team can help you achieve
-                        your business goals. Whether you need to craft an idea
-                        for a completely new product or elevate the quality of
-                        an existing solution, we’ll help you to create a product
-                        that is laser targeted to your users’ needs and delivers
-                        business results.
+                        <h3 style="color: black; text-decoration: underline">
+                          Makeup Basics
+                        </h3>
+                        <div class="jobdetails__feature pt-3">
+                          <ul>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Detailed product knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Brush knowledge
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Vanity guidance & planning
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Face shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye shapes
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Colour Theory
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin analysis
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Skin prepping
+                            </li>
+                            <li>
+                              <i class="fal fa-check"></i>
+                              Eye liner application & types
+                            </li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
