--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <div
       id="header-sticky-mobile"
-      class="tp-md-header-area d-md-block d-lg-none pt-45"
+      class="tp-md-header-area d-md-block d-lg-none pt-25"
     >
       <div class="container-fluid">
         <div class="row align-items-center">
@@ -157,11 +157,14 @@
           <ul>
             <li>
               <i class="fas fa-star"></i>
-              <a href="#" target="_blank">Melbone st, Australia, Ny 12099</a>
+              <a href="#" target="_blank"
+                >WZ-49, Meenakshi Garden, Subhash Nagar, New Delhi, Delhi
+                110027</a
+              >
             </li>
             <li>
               <i class="fas fa-star"></i>
-              <a href="#">+81 800 123 456 78</a>
+              <a href="#">+91 9871316267</a>
             </li>
             <li>
               <i class="fas fa-star"></i>
@@ -169,13 +172,13 @@
             </li>
           </ul>
         </div>
-        <div class="tpoffcanvas__input d-none d-sm-block">
+        <!-- <div class="tpoffcanvas__input d-none d-sm-block">
           <p>Get UPdate</p>
           <form class="p-relative" action="#">
             <input type="text" placeholder="Enter mail" />
             <button type="submit"><i class="fas fa-paper-plane"></i></button>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
 
