--- a/index.html
+++ b/index.html
@@ -1855,6 +1855,11 @@
       </div>
     </section> -->
     <!---------------------------------- service details start ------------------------- -->
+    <section class="academy-banner">
+      <a href="academy.html">
+        <img src="assets/img/new/academy/12.jpg" style="width: 100%" alt="" />
+      </a>
+    </section>
 
     <!---------------------------- testimonial-area-start ---------------------------->
     <section id="reviews-area" class="pt-65">
