--- a/index.html
+++ b/index.html
@@ -1855,11 +1855,42 @@
       </div>
     </section> -->
     <!---------------------------------- service details start ------------------------- -->
-    <section class="academy-banner">
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="assets/img/new/academy/11.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption d-md-block">
+            <div class="cpprice__button caption-button">
+              <button class="tp-btn-yellow">
+                <a href="academy.html">See More</a>
+                <i class="fal fa-long-arrow-right"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="pt-10 text-center caption-buton-reverse">
+      <button class="tp-btn-yellow">
+        <a href="academy.html">See More</a>
+        <i class="fal fa-long-arrow-right"></i>
+      </button>
+    </div>
+    <!-- <section class="academy-banner">
       <a href="academy.html">
-        <img src="assets/img/new/academy/12.jpg" style="width: 100%" alt="" />
+        <img src="assets/img/new/academy/11.jpg" style="width: 100%" alt="" />
+        <div class="cpprice__button">
+          <button class="tp-btn-yellow">
+            <a href="#">Get Service Today</a>
+            <i class="fal fa-long-arrow-right"></i>
+          </button>
+        </div>
       </a>
-    </section>
+    </section> -->
 
     <!---------------------------- testimonial-area-start ---------------------------->
     <section id="reviews-area" class="pt-65">
