--- a/index.html
+++ b/index.html
@@ -1483,112 +1483,6 @@
     <!-- mission-area-end -->
 
     <!-- new section start  -->
-    <!-- <section id="pre-bridal" class="pt-80">
-      <div class="row">
-        <div class="row justify-content-center">
-          <div class="col-xl-10">
-            <div class="tp-project-section-box text-center pb-4">
-              <h2 class="tp-title-sm pt-4">
-                Pre-Bridal
-                <span class="tp-section-highlight">
-                  Services
-                  <svg
-                    width="141"
-                    height="11"
-                    viewBox="0 0 141 11"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path d="M0 0L141 11H0V0Z" fill="#FFDC60" />
-                  </svg>
-                </span>
-              </h2>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="cp-price-area">
-        <div class="container">
-          <div class="row tp-gx-15">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-              <div class="cpprice text-center mb-20">
-                <div class="cpprice__title">
-                  <h3 class="cp-price-title">
-                    Makeup By <br />
-                    <strong> Shivangi Wason </strong>
-                  </h3>
-                </div>
-                <div
-                  style="text-align: center; background-color: black"
-                  class="pt-2 pb-2"
-                >
-                  <div class="cpprice__meta">
-                    <h4 style="color: white">HD Bridal</h4>
-                  </div>
-                  <div class="cpprice__meta">
-                    <h4 style="color: #ffdc60; font-weight: bold">₹22,000</h4>
-                  </div>
-                </div>
-                <div
-                  style="
-                    border: 1px solid black;
-                    margin-top: 20px;
-                    text-align: center;
-                  "
-                >
-                  <div class="cpprice__meta">
-                    <h4 style="color: black">AB Bridal</h4>
-                  </div>
-                  <div class="cpprice__meta">
-                    <h4 style="color: black; font-weight: bold">₹25,000</h4>
-                  </div>
-                </div>
-
-                <div class="cpprice__button">
-                  <button class="tp-btn-yellow">
-                    <a href="#">Get Service Today</a>
-                    <i class="fal fa-long-arrow-right"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-              <div class="cpprice text-center mb-20">
-                <div class="cpprice__title">
-                  <h3 class="cp-price-title">
-                    Makeup By <br />
-                    <strong> Senior Artists </strong>
-                  </h3>
-                </div>
-                <div style="border: 1px solid black" class="pt-2 pb-2">
-                  <div class="cpprice__meta">
-                    <h4 style="color: black">HD Bridal</h4>
-                  </div>
-                  <div class="cpprice__meta">
-                    <h4 style="color: black; font-weight: bold">₹13,000</h4>
-                  </div>
-                </div>
-                <div style="border: 1px solid black; margin-top: 20px">
-                  <div class="cpprice__meta">
-                    <h4 style="color: black">AB Bridal</h4>
-                  </div>
-                  <div class="cpprice__meta">
-                    <h4 style="color: black; font-weight: bold">₹15,000</h4>
-                  </div>
-                </div>
-
-                <div class="cpprice__button">
-                  <button class="tp-btn-yellow">
-                    <a href="#">Get Service Today</a>
-                    <i class="fal fa-long-arrow-right"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- new section end  -->
 
@@ -2093,10 +1987,10 @@
                 <div
                   class="tp-footer-widget__social-link tp-footer-widget__social-link-2"
                 >
-                  <a href="#"><i class="fab fa-youtube"></i></a>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-skype"></i></a>
+                  <a href="#"><i class="fab fa-youtube"></i></a>
+                  <!-- <a href="#"><i class="fab fa-skype"></i></a> -->
                 </div>
               </div>
             </div>
