--- a/index.html
+++ b/index.html
@@ -1987,9 +1987,17 @@
                 <div
                   class="tp-footer-widget__social-link tp-footer-widget__social-link-2"
                 >
-                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a
+                    href="https://www.instagram.com/streetsalonbyshivangiwason/"
+                    target="_blank"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-youtube"></i></a>
+                  <a
+                    href="https://www.youtube.com/@shivangiwason3483"
+                    target="_blank"
+                    ><i class="fab fa-youtube"></i
+                  ></a>
                   <!-- <a href="#"><i class="fab fa-skype"></i></a> -->
                 </div>
               </div>
