--- a/academy.html
+++ b/academy.html
@@ -1603,10 +1603,18 @@
                 <div
                   class="tp-footer-widget__social-link tp-footer-widget__social-link-2"
                 >
-                  <a href="#"><i class="fab fa-youtube"></i></a>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a
+                    href="https://www.instagram.com/streetsalonbyshivangiwason/"
+                    target="_blank"
+                    ><i class="fab fa-instagram"></i
+                  ></a>
                   <a href="#"><i class="fab fa-facebook-f"></i></a>
-                  <a href="#"><i class="fab fa-skype"></i></a>
+                  <a
+                    href="https://www.youtube.com/@shivangiwason3483"
+                    target="_blank"
+                    ><i class="fab fa-youtube"></i
+                  ></a>
+                  <!-- <a href="#"><i class="fab fa-skype"></i></a> -->
                 </div>
               </div>
             </div>
@@ -1621,7 +1629,7 @@
                   <ul>
                     <li><a href="#">Our Services</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Academy</a></li>
+                    <li><a href="academy.html">Academy</a></li>
                     <li><a href="#">Reviews</a></li>
                     <li><a href="#">Contact us</a></li>
                   </ul>
