--- a/academy.html
+++ b/academy.html
@@ -66,14 +66,14 @@
                 <nav id="mobile-menu">
                   <ul>
                     <li>
-                      <a href="#service-area">Services</a>
+                      <a href="index.html#service-area">Services</a>
                     </li>
 
                     <li>
-                      <a href="#portfolio-area">Portfolio</a>
+                      <a href="index.html#portfolio-area">Portfolio</a>
                     </li>
                     <li>
-                      <a class="gradient-text" href="#">Academy</a>
+                      <a class="gradient-text" href="academy.html">Academy</a>
                     </li>
 
                     <li>
